--- a/ProyectoFinal/Inicio/index.html
+++ b/ProyectoFinal/Inicio/index.html
@@ -1,3 +1,52 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Página Principal</title>
+</head>
+<body>
+    
+    <header>
+        <div class="icono-casa">🏠</div>
+        <div class="usuario">😊Usuario</div>
+    </header>
+
+    <section class="agregadas-recientemente">
+        <h2>Agregadas recientemente</h2>
+        <div class="contenedor-peliculas">
+            <div class="pelicula">
+                <div class="info">Star Wars<br>5 Temporadas<br>❤ 5K | 👁️ 25K</div>
+            </div>
+            <div class="pelicula"></div>
+            <div class="pelicula"></div>
+            <div class="pelicula"></div>
+            <div class="pelicula"></div>
+            <div class="pelicula"></div>
+        </div>
+    </section>
+
+    <section class="mejor-calificadas">
+        <h2>Mejor calificadas</h2>
+        <div class="contenedor-peliculas">
+            <div class="pelicula"></div>
+            <div class="pelicula"></div>
+            <div class="pelicula"></div>
+            <div class="pelicula"></div>
+            <div class="pelicula"></div>
+            <div class="pelicula"></div>
+        </div>
+    </section>
+
+    <section class="resenas-recientes">
+        <h2>Reseñas recientes</h2>
+        <div class="resena">
+            <div class="titulo-resena">📄 Título de reseña</div>
+            <div class="info-resena">
+                <div class="texto-resena">Este es un ejemplo de texto de la reseña. Aquí puedes agregar el contenido de la reseña más reciente.</div>
+                <div class="imagen-resena">Imagen de película</div>
+            </div>
         </div>
     </section>
 </body>
