Perfil series - admin
Vista del perfil de una serie desde un usuario administrador

--- a/ProyectoFinal/PerfilSerie_Admin/perfilSerie_Admin.html
+++ b/ProyectoFinal/PerfilSerie_Admin/perfilSerie_Admin.html
@@ -33,6 +33,8 @@
                     ⭐⭐⭐⭐
                 </div>
                 <div class="acciones-resena">
+                    <button>🖊️</button>
+                    <button>🗑️</button>
                 </div>
             </div>
         </div>
