--- a/ProyectoFinal/PerfilSerie/perfilSerie.html
+++ b/ProyectoFinal/PerfilSerie/perfilSerie.html
@@ -24,7 +24,7 @@
 
         <div class="resenas">
             <div class="resena">
-                <h4>Reseña hecha por mi</h4>
+                <h4>Nombre del usuario</h4>
                 <div class="contenido-resena">
                     <p>Esta es una reseña escrita por una persona acerca de una serie...</p>
                     <div class="imagen-resena"></div>
