--- a/ProyectoFinal/Inicio/index.html
+++ b/ProyectoFinal/Inicio/index.html
@@ -15,27 +15,27 @@
 
     <section class="agregadas-recientemente">
         <h2>Agregadas recientemente</h2>
-        <div class="contenedor-peliculas">
-            <div class="pelicula">
+        <div class="contenedor-series">
+            <div class="serie">
                 <div class="info">Star Wars<br>5 Temporadas<br>❤ 5K | 👁️ 25K</div>
             </div>
-            <div class="pelicula"></div>
-            <div class="pelicula"></div>
-            <div class="pelicula"></div>
-            <div class="pelicula"></div>
-            <div class="pelicula"></div>
+            <div class="serie"></div>
+            <div class="serie"></div>
+            <div class="serie"></div>
+            <div class="serie"></div>
+            <div class="serie"></div>
         </div>
     </section>
 
     <section class="mejor-calificadas">
         <h2>Mejor calificadas</h2>
-        <div class="contenedor-peliculas">
-            <div class="pelicula"></div>
-            <div class="pelicula"></div>
-            <div class="pelicula"></div>
-            <div class="pelicula"></div>
-            <div class="pelicula"></div>
-            <div class="pelicula"></div>
+        <div class="contenedor-series">
+            <div class="serie"></div>
+            <div class="serie"></div>
+            <div class="serie"></div>
+            <div class="serie"></div>
+            <div class="serie"></div>
+            <div class="serie"></div>
         </div>
     </section>
 
@@ -45,7 +45,7 @@
             <div class="titulo-resena">📄 Título de reseña</div>
             <div class="info-resena">
                 <div class="texto-resena">Este es un ejemplo de texto de la reseña. Aquí puedes agregar el contenido de la reseña más reciente.</div>
-                <div class="imagen-resena">Imagen de película</div>
+                <div class="imagen-resena">Imagen de serie</div>
             </div>
         </div>
     </section>
