--- a/ProyectoFinal/PerfilPersona/perfilPersona.html
+++ b/ProyectoFinal/PerfilPersona/perfilPersona.html
@@ -19,12 +19,12 @@
 
         <div class="vistas-recientes">
             <h3>Vistas Recientemente</h3>
-            <div class="peliculas-recientes">
-                <div class="pelicula"></div>
-                <div class="pelicula"></div>
-                <div class="pelicula"></div>
-                <div class="pelicula"></div>
-                <div class="pelicula"></div>
+            <div class="series-recientes">
+                <div class="serie"></div>
+                <div class="serie"></div>
+                <div class="serie"></div>
+                <div class="serie"></div>
+                <div class="serie"></div>
             </div>
         </div>
 
@@ -52,8 +52,8 @@
 
         <div class="favoritas">
             <h4>Favoritas</h4>
-            <div class="pelicula-favorita"></div>
-            <div class="pelicula-favorita"></div>
+            <div class="serie-favorita"></div>
+            <div class="serie-favorita"></div>
         </div>
     </div>
 </body>
