--- a/ProyectoFinal/PerfilSerie/perfilSerie.html
+++ b/ProyectoFinal/PerfilSerie/perfilSerie.html
@@ -9,10 +9,10 @@
 <body>
     <div class="gridContainer">
 
-        <div class="PerfilPelicula">
-            <div class="foto-PerfilPelicula"></div>
+        <div class="Perfilserie">
+            <div class="foto-Perfilserie"></div>
             <div class="descripcion">
-                <h2>Titulo de la pelicula</h2>
+                <h2>Titulo de la serie</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt facere iste harum fuga corporis! Impedit laudantium illum consectetur, vitae quia fuga maiores aut nisi debitis itaque dicta amet tenetur ab fugit maxime corporis nulla commodi vero. Neque error quos eius libero. Vitae, accusantium! Magnam neque deleniti, reiciendis vitae laborum adipisci. Voluptatem eligendi dolorem at beatae doloribus harum tempora aliquid fugiat voluptatum a perspiciatis, laudantium minus amet quas qui quos. Qui dignissimos recusandae itaque maiores labore a quam in laborum! Error impedit, maiores ducimus omnis perspiciatis esse unde nulla eum, illo vero totam assumenda beatae minus deleniti atque facilis ad animi!</p>
             </div>
         </div>
@@ -39,8 +39,8 @@
 
         <div class="similares">
             <h4>Favoritas</h4>
-            <div class="pelicula-similar"></div>
-            <div class="pelicula-similar"></div>
+            <div class="serie-similar"></div>
+            <div class="serie-similar"></div>
         </div>
     </div>
 </body>
