--- a/ProyectoFinal/Inicio/index.html
+++ b/ProyectoFinal/Inicio/index.html
@@ -9,7 +9,7 @@
 <body>
     
     <header>
-        <div class="icono-casa">🏠</div>
+        <div class="icono-casa"><a href="/Inicio/index.html">🏠</a></div>
         <div class="usuario">😊Usuario</div>
     </header>
 
@@ -19,7 +19,7 @@
             <div class="serie">
                 <div class="info">Star Wars<br>5 Temporadas<br>❤ 5K | 👁️ 25K</div>
             </div>
-            <div class="serie"></div>
+            <div class="serie"><a href="/PerfilSerie/perfilSerie.html"></a></div>
             <div class="serie"></div>
             <div class="serie"></div>
             <div class="serie"></div>
@@ -30,7 +30,7 @@
     <section class="mejor-calificadas">
         <h2>Mejor calificadas</h2>
         <div class="contenedor-series">
-            <div class="serie"></div>
+            <div class="serie"><a href="/PerfilSerie/perfilSerie.html"></a></div>
             <div class="serie"></div>
             <div class="serie"></div>
             <div class="serie"></div>
