--- a/ProyectoFinal/PerfilPersona/perfilPersona.html
+++ b/ProyectoFinal/PerfilPersona/perfilPersona.html
@@ -7,6 +7,11 @@
     <title>Perfil de Persona</title>
 </head>
 <body>
+    <header>
+        <div class="icono-casa"><a href="/Inicio/index.html">🏠</a></div>
+        <div class="usuario">😊Usuario</div>
+    </header>
+
     <div class="gridContainer">
 
         <div class="perfil">
@@ -20,7 +25,7 @@
         <div class="vistas-recientes">
             <h3>Vistas Recientemente</h3>
             <div class="series-recientes">
-                <div class="serie"></div>
+                <div class="serie"><a href="/PerfilSerie/perfilSerie.html"></a></div>
                 <div class="serie"></div>
                 <div class="serie"></div>
                 <div class="serie"></div>
