--- a/ProyectoFinal/PerfilSerie/perfilSerie.html
+++ b/ProyectoFinal/PerfilSerie/perfilSerie.html
@@ -7,6 +7,10 @@
     <title>Perfil de Persona</title>
 </head>
 <body>
+    <header>
+        <div class="icono-casa"><a href="/Inicio/index.html">🏠</a></div>
+        <div class="usuario">😊Usuario</div>
+    </header>
     <div class="gridContainer">
 
         <div class="Perfilserie">
