--- a/ProyectoFinal/LogIn/LogIn.html
+++ b/ProyectoFinal/LogIn/LogIn.html
@@ -18,8 +18,9 @@
                 <h4 for="contraseña">Contraseña:</h4>
                 <input type="password"  id="contraseña" placeholder="Contraseña" required>
             </div>
-            <button type="submit" class="btn">Iniciar Sesion</button>
+            <button type="submit" class="btn"><a href="/Inicio/index.html">Iniciar Sesion</a></button>
         </form>
+        <a href="/Registro/Registro.html">registro</a>
     </div>
 </body>
 </html>
