--- a/ProyectoFinal/Registro/Registro.html
+++ b/ProyectoFinal/Registro/Registro.html
@@ -22,8 +22,9 @@
                 <label for="contra">Contraseña:</label>
                 <input type="password" id="contra" placeholder="Contraseña" required>
             </div>
-            <button type="submit" class="btn">Aceptar</button>
+            <button type="submit" class="btn"><a href="/LogIn/LogIn.html">Aceptar</a></button>
         </form>
+        
     </div>
 </body>
 </html>
