--- a/ProyectoFinal/Registro/Registro.html
+++ b/ProyectoFinal/Registro/Registro.html
@@ -22,7 +22,8 @@
                 <label for="contra">Contraseña:</label>
                 <input type="password" id="contra" placeholder="Contraseña" required>
             </div>
-            <button type="submit" class="btn"><a href="/LogIn/LogIn.html">Aceptar</a></button>
+             <button type="submit" class="btn"><a href="/LogIn/LogIn.html">Aceptar</a></button> 
+             <input type="button" class="btnRegistro" value="Registrarse">
         </form>
         
     </div>
