--- a/ProyectoFinal/LogIn/LogIn.html
+++ b/ProyectoFinal/LogIn/LogIn.html
@@ -1,26 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login y Registro</title>
     <link rel="stylesheet" href="Style.css">
-    <title>Sing In</title>
 </head>
 <body>
-    <div class="mainContainer">
-        <h2>Iniciar Sesion</h2>
-        <form>
-            <div class="textbox">
-                <h4 for="usuario">Usuario:</h4>
-                <input type="text" id="usuario" placeholder="Usuario" required>
-            </div>
-            <div class="textbox">
-                <h4 for="contraseña">Contraseña:</h4>
-                <input type="password"  id="contraseña" placeholder="Contraseña" required>
-            </div>
-            <button type="submit" class="btn"><a href="/Inicio/index.html">Iniciar Sesion</a></button>
-        </form>
-        <a href="/Registro/Registro.html">registro</a>
+    <div class="contenedor" id="contenedor">
+        <!-- Sección del logo -->
+        <div class="panel-logo" id="panel-logo">
+            <img src="logo.png" alt="Episodico" class="logo">
+            <p>Rankea tus series favoritas!</p>
+        </div>
+
+        <!-- Sección de formularios -->
+        <div class="panel-formulario">
+            <!-- Formulario de inicio de sesión -->
+            <form id="formulario-inicio" class="formulario activo" action="AccionIniciarSesion" method="POST">
+                <h2>Iniciar sesión</h2>
+                <label for="email-inicio">E-mail:</label>
+                <input type="email" id="email-inicio" placeholder="Correo electrónico" required>
+                <label for="password-inicio">Contraseña:</label>
+                <input type="password" id="password-inicio" placeholder="Contraseña" required>
+                <button type="submit">Ingresar</button>
+                <p id="textoEspecial">¿No tienes cuenta? <span id="mostrar-registro">Regístrate</span></p>
+            </form>
+
+            <!-- Formulario de registro -->
+            <form id="formulario-registro" class="formulario">
+                <h2>Registrarse</h2>
+                <label for="email-registro">E-mail:</label>
+                <input type="email" id="email-registro" placeholder="Correo electrónico" required>
+                <label for="nombre-registro">Nombre de usuario:</label>
+                <input type="text" id="nombre-registro" placeholder="Nombre de usuario" required>
+                <label for="password-registro">Contraseña:</label>
+                <input type="password" id="password-registro" placeholder="Contraseña" required>
+                <button type="submit">Aceptar</button>
+                <p id="textoEspecial">¿Ya tienes cuenta? <span id="mostrar-inicio">Inicia sesión</span></p>
+            </form>
+        </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
